# symphonycast

./: README.md  meson.build
include/: symphonycast.h
src/: main.c
src/common/: types.h  utils.h
src/discovery/: discovery.h  mdns_server.c  mdns_server.h
src/streaming/: streamer.c  streamer.h  streaming.h
tests/discovery/: mdns_test.c
tests/streaming/: streamer_test.c
